@@ -10,7 +10,8 @@ v.0.5dev (ongoing development)
  * refactor adv_bignum: support height > 4, loadable chars with offset
  * ged rid of global variables buffer & tmp in lcdproc client
  + add init-script templates for LSB 3.x conforming systems
- * fix cellwidth, vbar & hbar in iMon driver
+ * fix cellwidth in iMon driver
+ + graphics character support in iMon driver (John Saunders)
  * try harder to find a shell in lcdexec
 
 v.0.5.1
